--- a/RecipeTop/main/static/main/css/home.css
+++ b/RecipeTop/main/static/main/css/home.css
@@ -58,12 +58,15 @@
 
 .side_container {
   position: absolute;
-  height: 100%;
-  width: 60vw;
-  background: red;
-  top: 25%;
-  right: 5%;
-  color: blue;
+  height: 70vh;
+  width: 35vw;
+  top: 15%;
+  right: 0%;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -o-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  transition: all 2s ease;
 }
 
 /*# sourceMappingURL=home.css.map */
