--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -43,7 +43,7 @@
 <div class="side_container">
     <div id="portfolio" class="section gray cards">
         <div class="container">
-            {% for recipe in recipes %}
+            {% for recipe in suggestions %}
                 <div class="gallery">
                     <div class="col l4 m6 s12 gallery-item gallery-expand gallery-filter polygon">
                         <div class="gallery-curve-wrapper">
