--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -185,26 +185,25 @@
                                         {{recipe.description}}
                                 </p>
                                 <h4>Ingredients</h4>
-                                <div class="ingredient">
-                                    <table class="ingredients_table">
-                                        <tr>
-                                        {% for ing in recipe.recipetoingredient_set.all %}
-                                        <td>
+                                <div class="ingredients_table_card">
+                                    {% for ing in recipe.recipetoingredient_set.all %}
+                                        <label>
+                                            <input type="checkbox" value="{{ing.ingredient.name}}" name="ingredients"/>
+                                                <span>{{ing.quantity}} {{ing.get_unit}} {{ing.ingredient.name}}  </span>
+                                        </label>
+                                    {% endfor %}
+                                </div>
+                                <br>
+                                <h4>Utensils</h4>
+                                <div class="utensils_table_card">
+                                      {% for utensil in recipe.utensils.all %}
                                             <label>
-                                                <input type="checkbox" value="{{ing.ingredient.name}}" name="ingredients"/>
-                                                    <span>{{ing.quantity}} {{ing.get_unit}} {{ing.ingredient.name}}  </span>
+                                                <input type="checkbox" value="{{utensil.name}}" name="utensils"/>
+                                                    <span>{{utensil.name}}  </span>
                                             </label>
-                                        </td>
-                                        {% cycle "" ""  "</tr><tr>" %}
                                         {% endfor %}
-                                        </tr>
-
-                                    </table>
-
                                 </div>
 
-
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo modi vel autem ducimus atque eligendi dolores repellat, temporibus, animi eum quis deserunt placeat exercitationem praesentium eaque at rerum aperiam soluta?</p>
                             </div>
                     </div>
                         <div class="gallery-action">
