Update search page

--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -28,7 +28,7 @@
 
             <!-- Search Bar -->
             <div class="input-field">
-              <input id="search" type="search" required>
+              <input id="search" type="search">
               <label class="label-icon" for="search"><i class="material-icons">search</i></label>
               <i class="material-icons">close</i>
             </div>
@@ -202,6 +202,10 @@
                                                     <span>{{utensil.name}}  </span>
                                             </label>
                                         {% endfor %}
+                                </div>
+
+                                <h4>Method</h4>
+                                <div class="recipe_steps">
                                 </div>
 
                             </div>
