Format search page

--- a/RecipeTop/main/static/main/css/search.css
+++ b/RecipeTop/main/static/main/css/search.css
@@ -27,6 +27,11 @@
   grid-template-columns:1fr 1fr 1fr;
 }
 
+.recipe_steps{
+  display: grid;
+  grid-template-columns:1fr 30fr;
+}
+
 .ingredients_table_card{
   display: grid;
   grid-template-columns:1fr 1fr 1fr;
@@ -40,8 +45,6 @@
 }
 .tags_container{
   width: 100%;
-  overflow: scroll;
-  height:70%;
   line-height: 10px;
 
 }
@@ -58,13 +61,9 @@
 }
 .utensils{
   line-height: 10px;
-  overflow: scroll;
-  height:80%;
 }
 .ingredients{
   line-height: 10px;
-  overflow: scroll;
-  height:80%;
 }
 .container {
   width: 100%;
