--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -103,7 +103,7 @@
             <h5 class="change_color">Duration (minutes)</h5>
             <div class="time change-line-height">
                 <p class="range-field">
-                    <input type="range" name="search_time" min="0" max="120" step="5" />
+                    <input type="range" name="search_time" min="0" max="120" value="120" step="5" />
                 </p>
             </div>
 
