Added reset filter button

--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -139,7 +139,8 @@
                     </div>
                 {% endfor %}
             </div>
-            <button type="submit"  class='waves-effect waves-dark btn teal lighten-1'>Apply Filters</button>
+            <button type="submit" class='waves-effect waves-dark btn teal lighten-1'>Apply Filters</button>
+            <a href={% url 'search' %} class='waves-effect waves-dark btn teal lighten-1'>Reset Filters</a>
         </form>
         </div>
     </nav>
