--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -218,7 +218,7 @@
                     </div>
                         <div class="gallery-action">
                             <a class="btn-floating btn-large waves-effect pink"><i class="material-icons hearted" id="hearted_{{recipe.id}}">{% check_hearted recipe.id %}</i></a>
-                            <a class="btn-floating btn-large waves-effect teal lighten-2"><i class="material-icons">edit</i></a>
+                            <a href="{% url 'edit' recipe.id %}" class="btn-floating btn-large waves-effect teal lighten-2"><i class="material-icons">edit</i></a>
                             <a href="{% url 'follow_steps' recipe.id %}" class= "btn-floating btn-large waves-effect green"><i class="material-icons">check</i></a>
                         </div>
                     </div>
