Add pop up to edit page

--- a/RecipeTop/main/templates/main/edit.html
+++ b/RecipeTop/main/templates/main/edit.html
@@ -34,11 +34,15 @@
 
 		<div id="title_modal" class="modal">
 			<div class="modal-content">
-				<h4>Modal Header</h4>
-				<p>A bunch of text</p>
+				<h4>Edit Title</h4>
+				<br>
+				<div class="input-field">
+					<input type="text" name="title" value="{{recipe.title}}">
+					<label for="title">Title</label>
+				</div>
 			</div>
 			<div class="modal-footer">
-				<a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+				<a href="#!" class="modal-close waves-effect waves-green btn">Save</a>
 			</div>
 		</div>                          
 	</div>
