--- a/RecipeTop/main/templates/main/edit.html
+++ b/RecipeTop/main/templates/main/edit.html
@@ -93,16 +93,66 @@
 					<div class="input-field">
 						<select id="ing_select" name="unit" value="{{ing.unit}}">
 							<option value="" disabled selected>Choose the units</option>
-							<option value="1" name="">cup(s)</option>
-							<option value="2" name="">kg</option>
-							<option value="3" name="">grams</option>
-							<option value="4" name="">lbs</option>
-							<option value="5" name="">ounces</option>
-							<option value="6" name="">ml</option>
-							<option value="7" name="">units</option>
-							<option value="8" name="">tbsp</option>
-							<option value="9" name="">tsp</option>
-							<option value="10" name="">handfuls</option>
+							{% if ing.unit == 1 %}
+								<option value="1" name="" selected>cup(s)</option>
+							{% else %}
+								<option value="1" name="">cup(s)</option>
+							{% endif %}
+
+							{% if ing.unit == 2 %}
+								<option value="2" name="" selected>kg</option>
+							{% else %}
+								<option value="2" name="">kg</option>
+							{% endif %}
+
+							{% if ing.unit == 3 %}
+								<option value="3" name="" selected>grams</option>
+							{% else %}
+								<option value="3" name="">grams</option>
+							{% endif %}
+
+							{% if ing.unit == 4 %}
+								<option value="4" name="" selected>lbs</option>
+							{% else %}
+								<option value="4" name="">lbs</option>
+							{% endif %}
+
+							{% if ing.unit == 5 %}
+								<option value="5" name="" selected>ounces</option>
+							{% else %}
+								<option value="5" name="">ounces</option>
+							{% endif %}
+
+							{% if ing.unit == 6 %}
+								<option value="6" name="" selected>ml</option>
+							{% else %}
+								<option value="6" name="">ml</option>
+							{% endif %}
+
+							{% if ing.unit == 7 %}
+								<option value="7" name="" selected>units</option>
+							{% else %}
+								<option value="7" name="" >units</option>
+							{% endif %}
+
+							{% if ing.unit == 8 %}
+								<option value="8" name="" selected>tbsp</option>
+							{% else %}
+								<option value="8" name="">tbsp</option>
+							{% endif %}
+
+							{% if ing.unit == 9 %}
+								<option value="9" name="" selected>tsp</option>
+							{% else %}
+								<option value="9" name="">tsp</option>
+							{% endif %}
+
+							{% if ing.unit == 10 %}
+								<option value="10" name="" selected>handfuls</option>
+							{% else %}
+								<option value="10" name="">handfuls</option>
+							{% endif %}
+
 						</select>
 						<label for="unit"> Unit</label>
 					</div>
@@ -129,6 +179,18 @@
 	            {% endfor %}
 	    </div>
     </div>
+    <div id="utensils_modal" class="modal">
+		<div class="modal-content">
+			<h4>Edit Utensils</h4>
+			<br>
+
+			<div class="utensils_modal_table"></div>
+
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class="modal-close waves-effect waves-green btn">Save</a>
+		</div>
+	</div>
     <div id="edit_steps">
 	    <h4>Method <i class="small material-icons icon-teal">edit</i></h4>
 	    <div class="recipe_steps">
@@ -140,6 +202,16 @@
 
 	    </div>
     </div>
+    <div id="method_modal" class="modal">
+		<div class="modal-content">
+			<h4>Edit Method</h4>
+			<br>
+
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class="modal-close waves-effect waves-green btn">Save</a>
+		</div>
+	</div>
     
 
 </div>
