--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -81,7 +81,7 @@
          </div>
 
 		
-	    <div class="fixed-action-btn">
+	    <div class="fixed-action-btn bigger">
   			<a class="btn-floating btn-large teal darken-3">
     			<i class="large material-icons">cake</i>
   			</a>
@@ -92,14 +92,15 @@
 	    					<i class="material-icons" id="timer-1-drag-anywhere">timer</i>
 	    				</a>
 	    				<div  id="timer1_modal_content">
+	    					<br>
         					<div id="demo1">          
-          						<p class="range-field">
+          						<p class="range-field bigger">
                 					<input type="range" id="timer1" min="0" max="60" />	
             					</p>
         					</div>
-        					<br>
+        					
         					<div id="timer_button_holder1">
-        						<button class="btn waves-effect waves-light" type="button" name="action" id="start_timer1"> Start Timer </button>
+        						<button class="btn waves-effect waves-light btn-large" type="button" name="action" id="start_timer1"> Start Timer </button>
         					</div>
 	    				</div>
 	    			</li>
@@ -108,14 +109,15 @@
 	    					<i class="material-icons" id="timer-2-drag-anywhere">timer</i>
 	    				</a>
 	    				<div  id="timer2_modal_content">
+	    					<br>
 	    					<div id="demo2">        
-	          					<p class="range-field">
+	          					<p class="range-field bigger">
 	                					<input type="range" id="timer2" min="0" max="60" />	
 	            				</p>
             				</div>
-        					<br>
+        					
         					<div id="timer_button_holder2">
-        						<button class="btn waves-effect waves-light" type="button" name="action" id="start_timer2"> Start Timer </button>
+        						<button class="btn waves-effect waves-light btn-large" type="button" name="action" id="start_timer2"> Start Timer </button>
         					</div>
 	    				</div>
 	    			</li>
