--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -39,7 +39,7 @@
 <br>
 <br>
 <br>
-
+<div>
 <div class="side_container">
     <div id="portfolio" class="section gray cards">
         <div class="container">
@@ -83,7 +83,7 @@
         </div>
     </div> 
 </div>
-
+</div>
 {% endblock %}
 
 {% block javascript %}
