--- a/RecipeTop/main/templates/main/finish_recipe.html
+++ b/RecipeTop/main/templates/main/finish_recipe.html
@@ -13,7 +13,9 @@
 	<br>
 	<br>
 	<br> -->
-
+<head>
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+</head>
 <body>
 			<div class="ending_container">
 				<div class="box_container">
