js for finished page
added rating fix

--- a/RecipeTop/main/templates/main/finish_recipe.html
+++ b/RecipeTop/main/templates/main/finish_recipe.html
@@ -33,11 +33,11 @@
 			</div>
 			<h5 class="feedback_msg">How difficult was this recipe?</h5>
 			<div class="difficulty">
-					<img src="../../static/main/img/bc2.svg" class="star3 stars" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star2 stars" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star1 stars" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star2 stars" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star3 stars" alt="">
+					<img src="../../static/main/img/bc2.svg" class="star3 cakes" alt="">
+					<img src="../../static/main/img/bc2.svg" class="star2 cakes" alt="">
+					<img src="../../static/main/img/bc2.svg" class="star1 cakes" alt="">
+					<img src="../../static/main/img/bc2.svg" class="star2 cakes" alt="">
+					<img src="../../static/main/img/bc2.svg" class="star3 cakes" alt="">
 			</div>
 			<div class="bottom_button">
 				<a class="waves-effect waves-light btn-small"><i class="material-icons right">edit</i>Edit</a>
