--- a/RecipeTop/main/static/main/css/finish_recipe.css
+++ b/RecipeTop/main/static/main/css/finish_recipe.css
@@ -31,6 +31,7 @@ body{
 }
 .feedback_msg{
     text-align: center;
+    margin-bottom: 5%;
 }
 .message >h6{
     font-family:'Fira Sans', sans-serif;
@@ -60,6 +61,13 @@ body{
 .stars{
     height:70%;
     width:70%;
+}
+.cakes{
+    height:70%;
+    width:70%; 
+}
+.cakes:hover{
+    cursor:pointer;
 }
 .stars:hover{
     cursor:pointer;
