added star and cake functionality
-added disabled button

--- a/RecipeTop/main/templates/main/finish_recipe.html
+++ b/RecipeTop/main/templates/main/finish_recipe.html
@@ -40,8 +40,8 @@
 					<img src="../../static/main/img/bc2.svg" class="star3 cakes" alt="">
 			</div>
 			<div class="bottom_button">
-				<a class="waves-effect waves-light btn-small"><i class="material-icons right">edit</i>Edit</a>
-				<a class="waves-effect waves-light btn-small"><i class="material-icons right">home</i>Home</a>
+				<a class="waves-effect waves-light btn-small disabled dis_btn"><i class="material-icons right">edit</i>Edit</a>
+				<a class="waves-effect waves-light btn-small disabled dis_btn"><i class="material-icons right">home</i>Home</a>
 			</div>
 		</div>
 	</div>
